change port number to 8081 add context path edit confirmation email to display a link modify return value as: 	{"success": "message"} 	{"error": "error message"}

--- a/middleware/src/main/resources/messages.properties
+++ b/middleware/src/main/resources/messages.properties
@@ -1,18 +1,19 @@
-essage.username=Username required
+message.username=Username required
 message.password=Password required
 message.unauth=Unauthorized Access !!
 message.badCredentials=Invalid Credentials
 message.sessionExpired=Session Timed Out
 message.logoutError=Sorry, error logging out
 message.logoutSucc=You logged out successfully
-message.regSucc=You registered successfully. We will send you a confirmation message to your email account.
-message.regError=An account for that username/email already exists. Please enter a different username.
+message.regSucc=You registered successfully on Socidia. Click the linkage to activate your account.
+message.actSucc=Your Socidia account has been activated.
+message.regError=An account for that email already exists. Please enter a different one.
 message.lastName=Last name is required
 message.firstName=First name required
 message.badEmail=Invalid email address
 message.email.config.error=Error in java mail configuration
 token.message=Your token is:
 auth.message.disabled=Your account is disabled please check your mail and click on the confirmation link
-auth.message.expired=Your registration token has expired. Please register again.
-auth.message.invalidUser=This username is invalid, or does not exist.
-auth.message.invalidToken=Invalid token.
+message.expired=Your registration token has expired. Please register again.
+message.invalidToken=Invalid token.
+message.regUnknownError=Registration doesn't succeed!
