delete context path

--- a/middleware/src/main/resources/messages.properties
+++ b/middleware/src/main/resources/messages.properties
@@ -14,6 +14,7 @@ message.badEmail=Invalid email address
 message.email.config.error=Error in java mail configuration
 token.message=Your token is:
 auth.message.disabled=Your account is disabled please check your mail and click on the confirmation link
+auth.message.emailNotExist=Email address doesn't exist
 message.expired=Your registration token has expired. Please register again.
 message.invalidToken=Invalid token.
 message.regUnknownError=Registration doesn't succeed!
