add revoke authorization add column phone_num in user etc

--- a/middleware/src/main/resources/messages.properties
+++ b/middleware/src/main/resources/messages.properties
@@ -15,6 +15,7 @@ message.email.config.error=Error in java mail configuration
 token.message=Your token is:
 auth.message.disabled=Your account is disabled please check your mail and click on the confirmation link
 auth.message.emailNotExist=Email address doesn't exist
-message.expired=Your registration token has expired. Please register again.
+message.expired=Your registration token has expired. Please register again. Request a new confirmation token, please!
+message.used=This token has been used. Go to Socidia homepage to login!
 message.invalidToken=Invalid token.
 message.regUnknownError=Registration doesn't succeed!
