fixed message typo fixed login lazy data fetch error ect

--- a/middleware/src/main/resources/messages.properties
+++ b/middleware/src/main/resources/messages.properties
@@ -11,9 +11,9 @@ message.regError=An account for that email already exists. Please enter a differ
 message.lastName=Last name is required
 message.firstName=First name required
 message.badEmail=Invalid email address
-message.email.config.error=Error in java mail configuration
+message.email.config.error=Error in java email configuration
 token.message=Your token is:
-auth.message.disabled=Your account is disabled please check your mail and click on the confirmation link
+auth.message.disabled=Your account is disabled please check your email and click on the confirmation link
 auth.message.emailNotExist=Email address doesn't exist
 message.expired=Your registration token has expired. Please register again. Request a new confirmation token, please!
 message.used=This token has been used. Go to Socidia homepage to login!
